--- a/conversion.tex
+++ b/conversion.tex
@@ -18,9 +18,9 @@ While it is preferable to work in \latex from the start, this is not always poss
 If you want to convert your file on your local computer, you can use the program \computer{writer2latex}. The relevant command is 
 \begin{verbatim}
 w2l -wrap_lines_after=0 -multilingual=false 
--simple_table_limit=10" -use_supertabular=false 
+-simple_table_limit=10 -use_supertabular=false 
 -float_tables=true -float_figures=true 
--use_caption=true -image_options="width=\\textwidth 
+-use_caption=true -image_options=width=\\textwidth 
 -inputencoding=utf8 -use_tipa=false -use_bibtex=true  
 -formatting=convert_most -ignore_empty_paragraphs=true 
 -use_color=false -page_formatting=ignore_all
