small stylistic fixes

--- a/authors.tex
+++ b/authors.tex
@@ -170,7 +170,7 @@ citation type & example &yields\\
 \midrule
 author &  \computer{\raggedright As {\bs}citet[215]\{MZ85a\} have shown} &As \citet[215]{MZ85a} have shown\\[2em]
        &  \computer{\raggedright As {\bs}citet[215]\{MZ85a\} and {\bs}citet\{Bloomfield1933language\} have shown} &  As \citet[215]{MZ85a} and \citet{Bloomfield1933language} have shown\\[2em]
-work   &  \computer{\raggedright As was shown in {\bs}citew[215]\{Saussure16a\}, this is a problem for theories that \ldots} & As was shown in \citew[215]{Saussure16a}, this is a problem for theories that \ldots\\[2em]
+work   &  \computer{\raggedright As was shown in {\bs}citet[215]\{Saussure16a\}, this is a problem for theories that \ldots} & As was shown in \citet[215]{Saussure16a}, this is a problem for theories that \ldots\\[2em]
 work   &  \computer{\raggedright This is not true {\bs}citep\{Saussure16a, \mbox{Bloomfield1933language\}}.} & This is not true \citep{Saussure16a,Bloomfield1933language}.\\[2em]
 no double parentheses   & \computer{\raggedright This is not true ({\bs}citealt\{Saussure16a\} and especially {\bs}citealt\{Bloomfield1933language\}). }& This is not true (\citealt{Saussure16a} and especially \citealt{Bloomfield1933language}).\\
 \lspbottomrule
