--- a/showcases.tex
+++ b/showcases.tex
@@ -1,6 +1,6 @@
 \chapter{Showcases}
 
-There is a huge amount of packages that can be used for various purposes. \citew{MG2013a} is a good
+There is a huge amount of packages that can be used for various purposes. \citet{MG2013a} is a good
 reference book. This section discusses some aspects of some packages that are relevant for
 linguistics. Every \latex package comes with a documentation and users should consult these
 documentations, too. The purpose of this section is to point users to the packages that we think
