added info about colours, acronyms, series overview page in books

--- a/serieseditors.tex
+++ b/serieseditors.tex
@@ -155,6 +155,7 @@ To discuss your series proposal, please contact sebastian.nordhoff@langsci-press
 
 
 
-
-
+\section{Acceptance}
+Upon acceptance of your proposal, you have to choose a color for your series, an acronym, and a short description of \emph{Aims and Scope}.
+All books have a series overview page. This usually lists the editors. You can also add additional material, like a logo or a short description. About half the page should be reserved for a list of titles that have appeared in the series. Have a look at existing series for inspiration.
 
