--- a/proofreaders.tex
+++ b/proofreaders.tex
@@ -7,6 +7,8 @@ Proofreaders should pay attention to spelling, grammar, style etc. A couple of p
  \item Spacing after punctuation and parentheses.
  \item Parentheses and brackets in examples should not be italicized. The same is true for most subscripts in examples.
  \item footnotemarks in examples should not be typeset in italics.
+ \item References which have an open parentheses before the name rather than before the year, or vice versa
+ \item Double parentheses with citations
 \end{itemize}
 
 
