--- a/wrap-global.tex
+++ b/wrap-global.tex
@@ -128,6 +128,7 @@
 \mainmatter     
 
 
+\include{introduction}
 \include{authors}
 % \include{gsr}
 \include{volumeeditors}
@@ -137,7 +138,7 @@
 \include{indexers}
 \include{typesetters} 
 \include{openness}
-\include{showcases}
+% \include{showcases}
 % \include{serieseditors}
 
 \backmatter
